[package]
name = "question-box"
version = "0.1.0"
authors = ["zevichen <zevichen@qq.com>"]
edition="2018"

[[test]]
name = "tests"
path ="tests/lib.rs"

[dependencies]
actix = "0.8.3"
actix-web = "1.0.3"
env_logger = "0.6"
log = "0.4.7"
uuid = "0.7.4"
actix-rt = "0.2.3"
actix-session = "0.1.1"
actix-files = "0.1.3"
actix-http = "0.2.5"
serde = "1.0.97"
serde_json = "1.0.40"
serde_derive="1.0.97"
num_cpus = "1.10.1"
regex = "1.1.9"
dotenv = "0.14.1"
chrono = { version = "0.4.7", features = ["serde"] }
bcrypt = "0.5.0"
pulldown-cmark = "0.5.2"
timeago = "0.2.0"
openssl = "0.10.23"
md5 = "0.6.1"
ring = "0.14.6"
futures = "0.1.28"
rand = "0.7.0"
rand_core = "0.5.0"
r2d2 = "0.8.5"
rusqlite = "0.19.0"
r2d2_sqlite = "0.11.0"
hyper="0.12.32"
pretty_env_logger="0.3.0"
reqwest="0.9.19"
actix-identity="0.1.0"
jsonwebtoken = "6"